Fix insufficient contrast on "Not imported" status badge

--- a/asset/css/sample-data.css
+++ b/asset/css/sample-data.css
@@ -52,7 +52,7 @@
 }
 
 .sample-data-status.not-imported {
-    color: #aaa;
+    color: #767676;
 }
 
 .sample-data-status.failed {
